--- a/src/app/sub-editors-demo/sub-editors-demo.component.html
+++ b/src/app/sub-editors-demo/sub-editors-demo.component.html
@@ -37,6 +37,12 @@
           <pre>{{ lastReferences | json }}</pre>
         </div>
       </mat-tab>
+      <mat-tab label="Decorated IDs">
+        <cadmus-decorated-ids (idsChange)="onIdsChange($event)"></cadmus-decorated-ids>
+        <div *ngIf="lastDecoratedIds">
+          <pre>{{ lastDecoratedIds | json }}</pre>
+        </div>
+      </mat-tab>
     </mat-tab-group>
   </mat-card-content>
 </mat-card>
