--- a/src/app/sub-editors-demo/sub-editors-demo.component.html
+++ b/src/app/sub-editors-demo/sub-editors-demo.component.html
@@ -18,6 +18,7 @@
           <pre>{{ lastPersonName | json }}</pre>
         </div>
       </mat-tab>
+
       <mat-tab label="External IDs">
         <cadmus-external-ids
           [model$]="externalIds$"
@@ -28,6 +29,7 @@
           <pre>{{ lastExternalIds | json }}</pre>
         </div>
       </mat-tab>
+
       <mat-tab label="References">
         <cadmus-doc-references
           [model$]="references$"
@@ -37,10 +39,21 @@
           <pre>{{ lastReferences | json }}</pre>
         </div>
       </mat-tab>
+
       <mat-tab label="Decorated IDs">
         <cadmus-decorated-ids (idsChange)="onIdsChange($event)"></cadmus-decorated-ids>
         <div *ngIf="lastDecoratedIds">
           <pre>{{ lastDecoratedIds | json }}</pre>
+        </div>
+      </mat-tab>
+
+      <mat-tab label="Decorated counts">
+        <cadmus-decorated-counts
+          [model$]="decoratedCounts$"
+          (modelChange)="onDecoratedCountsChange($event)">
+        </cadmus-decorated-counts>
+        <div *ngIf="lastDecoratedCounts">
+          <pre>{{ lastDecoratedCounts | json }}</pre>
         </div>
       </mat-tab>
     </mat-tab-group>
