--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/person-name/person-name.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/person-name/person-name.component.html
@@ -67,7 +67,7 @@
         color="primary"
         (click)="addPart()" matTooltip="Add a new part to the name"
       >
-        <mat-icon>add_circle</mat-icon> add
+        <mat-icon>add_circle</mat-icon> add part
       </button>
     </div>
     <div
