--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/decorated-ids/decorated-ids.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/decorated-ids/decorated-ids.component.html
@@ -131,12 +131,12 @@
     (click)="close()"
     type="button"
     mat-icon-button
-    matTooltip="Discard changes"
+    matTooltip="Discard IDs"
     color="warn"
   >
     <mat-icon>clear</mat-icon>
   </button>
-  <button mat-stroked-button matTooltip="Save changes" color="primary" (click)="save()">
+  <button mat-stroked-button matTooltip="Save IDs" color="primary" (click)="save()">
     <mat-icon>check_circle</mat-icon> save
   </button>
 </div>
