--- a/src/app/sub-editors-demo/sub-editors-demo.component.html
+++ b/src/app/sub-editors-demo/sub-editors-demo.component.html
@@ -41,7 +41,9 @@
       </mat-tab>
 
       <mat-tab label="Decorated IDs">
-        <cadmus-decorated-ids (idsChange)="onIdsChange($event)"></cadmus-decorated-ids>
+        <cadmus-decorated-ids
+          (idsChange)="onIdsChange($event)"
+        ></cadmus-decorated-ids>
         <div *ngIf="lastDecoratedIds">
           <pre>{{ lastDecoratedIds | json }}</pre>
         </div>
@@ -50,10 +52,22 @@
       <mat-tab label="Decorated counts">
         <cadmus-decorated-counts
           [model$]="decoratedCounts$"
-          (modelChange)="onDecoratedCountsChange($event)">
+          (modelChange)="onDecoratedCountsChange($event)"
+        >
         </cadmus-decorated-counts>
         <div *ngIf="lastDecoratedCounts">
           <pre>{{ lastDecoratedCounts | json }}</pre>
+        </div>
+      </mat-tab>
+
+      <mat-tab label="Cited Person">
+        <cadmus-cited-person
+          [langEntries]="langEntries"
+          [typeEntries]="namePartTypeEntries"
+          (personChage)="onCitedPersonChange($event)"
+        ></cadmus-cited-person>
+        <div *ngIf="lastCitedPerson">
+          <pre>{{ lastCitedPerson | json }}</pre>
         </div>
       </mat-tab>
     </mat-tab-group>
