--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/cited-person/cited-person.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/cited-person/cited-person.component.html
@@ -40,7 +40,7 @@
     <button
       type="submit"
       color="primary"
-      mat-stroked-button
+      mat-flat-button
       matTooltip="Save this person"
     >
       <mat-icon>check_circle</mat-icon> save person
