--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/decorated-counts/decorated-counts.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/decorated-counts/decorated-counts.component.html
@@ -9,7 +9,7 @@
         (click)="addCount()"
         matTooltip="Add a new count"
       >
-        <mat-icon>add_circle</mat-icon> add
+        <mat-icon>add_circle</mat-icon> add count
       </button>
     </div>
     <!-- list -->
