--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/decorated-ids/decorated-ids.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/decorated-ids/decorated-ids.component.html
@@ -3,7 +3,7 @@
   <mat-tab label="list">
     <div>
       <button mat-stroked-button (click)="editNewId()" color="primary">
-        <mat-icon>add_circle</mat-icon> add
+        <mat-icon>add_circle</mat-icon> add ID
       </button>
     </div>
     <table *ngIf="ids?.length">
@@ -137,6 +137,6 @@
     <mat-icon>clear</mat-icon>
   </button>
   <button mat-stroked-button matTooltip="Save IDs" color="primary" (click)="save()">
-    <mat-icon>check_circle</mat-icon> save
+    <mat-icon>check_circle</mat-icon> save IDs
   </button>
 </div>
