--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/external-ids/external-ids.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/external-ids/external-ids.component.html
@@ -8,7 +8,7 @@
         (click)="addId()"
         matTooltip="Add a new ID"
       >
-        <mat-icon>add_circle</mat-icon> add
+        <mat-icon>add_circle</mat-icon> add ID
       </button>
     </div>
     <div
