--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/physical-size/physical-size.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/physical-size/physical-size.component.html
@@ -151,5 +151,11 @@
         >tag too long</mat-error
       >
     </mat-form-field>
+
+    <!-- note -->
+    <mat-form-field>
+      <input matInput [formControl]="note" placeholder="note">
+      <mat-error *ngIf="note.errors?.maxLength && (note.dirty || note.touched)">note too long</mat-error>
+    </mat-form-field>
   </div>
 </form>
